[tool]
[tool.poetry]
name = "pg-mgt-utils"
version = "0.1.1"
homepage = "https://github.com/stevek-skzone/pg-mgt-utils"
description = "PostgreSQL Mgt Utils."
authors = ["Steve King <dev@skzone.org>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "pg_mgt_utils" },
    { include = "tests", format = "sdist" },
]
[tool.poetry_bumpversion.file."pg_mgt_utils/__init__.py"]

[tool.poetry.dependencies]
python = ">= 3.9, < 3.12"
psycopg = "^3.1"
requests = "^2.2"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-include-markdown-plugin = "^4.0"
mkdocs-material = "^9.1"
mkdocs-material-extensions = "^1.1"
mkdocs-macros-plugin = "^1.0.2"
mkdocstrings = "^0.22.0"
pymdown-extensions = "^10.1"
markupsafe = "=2.0.1"
Jinja2 = "^3.0"

[tool.poetry.group.dev.dependencies]
poetry-bumpversion = "^0.3.1"
click = "8.0.2"
black  = "^21.5b2"
isort  = "^5.8.0"
flake8  = "^3.9.2"
flake8-docstrings = "^1.6.0"
mypy = "^0.900"
pytest  = "^7.4"
pytest-cov  = "^2.12.0"
tox  = "^4.6"
tox-gh-actions = "^3.1"
virtualenv  = "^20.2.2"
twine  = "^3.3.0"
pre-commit = "^2.12.0"
toml = "^0.10.2"
bump2version = "^1.0.1"
docker = "^6.1.3"
Jinja2 = "^3.0"
markupsafe = "=2.0.1"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
