[tool]
[tool.poetry]
name = "pg-mgt-utils"
version = "0.1.2"
homepage = "https://github.com/stevek-skzone/pg-mgt-utils"
description = "PostgreSQL Mgt Utils."
authors = ["Steve King <dev@skzone.org>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "pg_mgt_utils" },
    { include = "tests", format = "sdist" },
]
[tool.poetry_bumpversion.file."pg_mgt_utils/__init__.py"]

[tool.poetry.dependencies]
python = ">= 3.9, <4.0"
psycopg = "^3.1"
requests = "^2.2"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-include-markdown-plugin = "^6.0"
mkdocs-material = "^9.5"
mkdocs-material-extensions = "^1.3"
mkdocs-macros-plugin = "^1.0"
mkdocstrings = "^0.25.0"
pymdown-extensions = "^10.8"
markupsafe = "^2.1"
Jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
bump2version = "^1.0.1"
tox = "^4.16.0"
tox-gh-actions = "^3.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
isort = "^5.13.2"
poetry-bumpversion = "^0.3.2"
twine = "^5.1.1"
black = "^24.4.2"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
